--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <picture class="header__picture">
             <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.png">
             <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.png">
-            <img src="./assets/img/cabecera-s.png" alt="Albufera al atardecer">
+            <img src="./assets/img/cabecera-s.png" loading="lazy" alt="Albufera al atardecer">
         </picture>
     </header>
 
@@ -61,7 +61,7 @@
 
             <div class="article--img">
                 <a href="lago.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img__clip-path" style="clip-path:url(#lago)" src="./assets/img/lake.jpg"
+                    <img class="article--img__clip-path" loading="lazy" style="clip-path:url(#lago)" src="./assets/img/lake.jpg"
                         alt="lago" />
                 </a>
             </div>
@@ -75,7 +75,7 @@
             <h2>La Devesa</h2>
             <div class="article--img">
                 <a href="devesa.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img2__clip-path" style="clip-path:url(#devesa)" src="./assets/img/devesa1.jpg"
+                    <img class="article--img2__clip-path" loading="lazy" style="clip-path:url(#devesa)" src="./assets/img/devesa1.jpg"
                         alt="devesa" ;>
                 </a>
             </div>
@@ -94,7 +94,7 @@
             <h2>Actividad humana</h2>
             <div class="article--img">
                 <a href="actividad-humana.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img3__clip-path" style="clip-path:url(#ah)" src="./assets/img/ah.jpg"
+                    <img class="article--img3__clip-path" loading="lazy" style="clip-path:url(#ah)" src="./assets/img/ah.jpg"
                         alt="actividad humana" ;>
                 </a>
             </div>
