--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/styles/main.scss" />
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js" async></script>
     <title>L'Albufera</title>
 </head>
 
