nuevas imagenes en index en webp y solucion silueta

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.png">
-            <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.png">
-            <img src="./assets/img/cabecera-s.png" loading="lazy" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.webp">
+            <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.webp">
+            <img src="./assets/img/cabecera-s.webp" loading="lazy" alt="Albufera al atardecer">
         </picture>
     </header>
 
@@ -61,7 +61,7 @@
 
             <div class="article--img">
                 <a href="lago.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img__clip-path" loading="lazy" style="clip-path:url(#lago)" src="./assets/img/lake.jpg"
+                    <img class="article--img__clip-path" loading="lazy" style="clip-path:url(#lago)" src="./assets/img/lake.webp"
                         alt="lago" />
                 </a>
             </div>
@@ -75,7 +75,7 @@
             <h2>La Devesa</h2>
             <div class="article--img">
                 <a href="devesa.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img2__clip-path" loading="lazy" style="clip-path:url(#devesa)" src="./assets/img/devesa1.jpg"
+                    <img class="article--img2__clip-path" loading="lazy" style="clip-path:url(#devesa)" src="./assets/img/devesa1.webp"
                         alt="devesa" ;>
                 </a>
             </div>
@@ -93,9 +93,9 @@
         <article class="main--article article article--3">
             <h2>Actividad humana</h2>
             <div class="article--img">
-                <a href="actividad-humana.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img3__clip-path" loading="lazy" style="clip-path:url(#ah)" src="./assets/img/ah.jpg"
-                        alt="actividad humana" ;>
+                <a href="actividad-humana.html" target="_self" rel="noopener noreferrer">        
+                    <img class="article--img3__clip-path" loading="lazy" style="clip-path:url(#ah2)" src="./assets/img/ah.webp"
+                        alt="actividad humana";/>
                 </a>
             </div>
             <p class="article--p">
