--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <picture class="header__picture">
             <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.webp">
             <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.webp">
-            <img src="./assets/img/cabecera-s.webp" loading="lazy" alt="Albufera al atardecer">
+            <img src="./assets/img/cabecera-s.webp" width="100%" height="auto" alt="Albufera al atardecer">
         </picture>
     </header>
 
@@ -61,7 +61,7 @@
 
             <div class="article--img">
                 <a href="lago.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img__clip-path" loading="lazy" style="clip-path:url(#lago)" src="./assets/img/lake.webp"
+                    <img class="article--img__clip-path" loading="lazy" width="300" height="300" style="clip-path:url(#lago)" src="./assets/img/lake.webp"
                         alt="lago" />
                 </a>
             </div>
@@ -75,7 +75,7 @@
             <h2>La Devesa</h2>
             <div class="article--img">
                 <a href="devesa.html" target="_self" rel="noopener noreferrer">
-                    <img class="article--img2__clip-path" loading="lazy" style="clip-path:url(#devesa)" src="./assets/img/devesa1.webp"
+                    <img class="article--img2__clip-path" loading="lazy" width="300" height="300" style="clip-path:url(#devesa)" src="./assets/img/devesa1.webp"
                         alt="devesa" ;>
                 </a>
             </div>
@@ -94,7 +94,7 @@
             <h2>Actividad humana</h2>
             <div class="article--img">
                 <a href="actividad-humana.html" target="_self" rel="noopener noreferrer">        
-                    <img class="article--img3__clip-path" loading="lazy" style="clip-path:url(#ah2)" src="./assets/img/ah.webp"
+                    <img class="article--img3__clip-path" loading="lazy" width="300" height="300" style="clip-path:url(#ah2)" src="./assets/img/ah.webp"
                         alt="actividad humana";/>
                 </a>
             </div>
