--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.webp">
-            <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.webp">
-            <img src="./assets/img/cabecera-s.webp" width="100%" height="auto" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/cabecera-l.webp">
+            <source media="(min-width: 500px )" width="858" height="612" srcset="./assets/img/cabecera-m.webp">
+            <img src="./assets/img/cabecera-s.webp" width="586" height="711" alt="Albufera al atardecer">
         </picture>
     </header>
 
