--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="header__logo logo">
-            <a href="albufera.html" target="_self" rel="noopener noreferrer">
+            <a href="albufera.html" target="_self" rel="noopener noreferrer" aria-label="Ir a la página Albufera">
                 <svg width="275" height="61" viewBox="0 0 275 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.69086 60.218V18.0771L0 19.2935V60.218H9.69086Z" />
                     <path
