cambios para Albufera.html

--- a/src/albufera.html
+++ b/src/albufera.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/albufera-l.jpg">
-            <source media="(min-width: 500px )" srcset="./assets/img/albufera-m.jpg">
-            <img src="./assets/img/albufera-s.jpg" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" srcset="./assets/img/albufera-l.webp">
+            <source media="(min-width: 500px )" srcset="./assets/img/albufera-m.webp">
+            <img src="./assets/img/albufera-s.webp" alt="Albufera al atardecer">
         </picture>
     </header>
 
@@ -56,7 +56,7 @@
             importante destino turístico en la región.
         </p>
         <div class="article__img">
-            <img src="./assets/img/pajaros.jpg" alt="Foto de Vicente Camarasa">
+            <img src="./assets/img/pajaros.webp" loading="lazy" width="448" height="255" alt="Foto de Vicente Camarasa">
             <span class="credito">Vicente Camarasa</span>
         </div>
         <p>
@@ -78,7 +78,7 @@
             que aparecen son de elaboración propia.
         </p>
         <div class="article__img">
-            <img src="./assets/img/pasarela.jpg" alt="Foto de Lucía Nieto">
+            <img src="./assets/img/pasarela.webp" loading="lazy" width="448" height="255 alt="Foto de Lucía Nieto">
             <span class="credito">Lucía Nieto</span>
         </div>
     </main>
