mocificación en albufera.html

--- a/src/albufera.html
+++ b/src/albufera.html
@@ -24,7 +24,6 @@
 
     <main>
         <div class="header__logo logo">
-            <a href="albufera.html" target="_self" rel="noopener noreferrer">
                 <svg width="275" height="61" viewBox="0 0 275 61" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.69086 60.218V18.0771L0 19.2935V60.218H9.69086Z" />
                     <path
@@ -45,7 +44,6 @@
                     <path
                         d="M42.7365 13.1757C42.7365 9.3724 41.5122 6.24827 39.0637 3.80329C36.7094 1.26776 33.6959 0 30.0231 0C26.4445 0 23.6193 0.996101 21.5475 2.9883C19.5699 4.88995 18.5811 7.33492 18.5811 10.3232C18.5811 13.221 19.4757 15.6207 21.265 17.5223C23.0543 19.424 25.3616 20.3748 28.1868 20.3748C31.0119 20.3748 33.4605 19.5598 35.5323 17.9298C35.5323 21.0992 34.1667 23.997 31.4357 26.623C28.7989 29.1586 25.7853 30.7886 22.3951 31.513L24.514 35.4521C30.1644 34.456 34.5905 32.0563 37.7924 28.253C41.0885 24.3592 42.7365 19.3334 42.7365 13.1757Z" />
                 </svg>
-            </a>
         </div>
         <p class="article__p">
             La Albufera de Valencia es una laguna costera ubicada a unos 10 kilómetros al sur de la ciudad de
@@ -78,7 +76,7 @@
             que aparecen son de elaboración propia.
         </p>
         <div class="article__img">
-            <img src="./assets/img/pasarela.webp" loading="lazy" width="448" height="255 alt="Foto de Lucía Nieto">
+            <img src="./assets/img/pasarela.webp" loading="lazy" width="448" height="255" alt="Foto de Lucía Nieto">
             <span class="credito">Lucía Nieto</span>
         </div>
     </main>
