cambios en lago 2

--- a/src/albufera.html
+++ b/src/albufera.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/albufera-l.webp">
-            <source media="(min-width: 500px )" srcset="./assets/img/albufera-m.webp">
-            <img src="./assets/img/albufera-s.webp" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/albufera-l.webp">
+            <source media="(min-width: 500px )" width="858" height="612" srcset="./assets/img/albufera-m.webp">
+            <img src="./assets/img/albufera-s.webp" width="586" height="711" alt="Albufera al atardecer">
         </picture>
     </header>
 
