--- a/src/lago.html
+++ b/src/lago.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
+    <meta name="description" content="El lago de la Albufera de Valencia">
     <link rel="stylesheet" href="assets/styles/main.scss" />
     <script type="module" src="app.js"></script>
     <title>El Lago</title>
@@ -14,9 +15,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/albufera-l.jpg">
-            <source media="(min-width: 500px )" srcset="./assets/img/albufera-m.jpg">
-            <img src="./assets/img/albufera-s.jpg" alt="Lago de la Albufera">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/albufera-l.webp">
+            <source media="(min-width: 500px )"  width="858" height="612" srcset="./assets/img/albufera-m.webp">
+            <img src="./assets/img/albufera-s.webp" width="586" height="711" alt="Lago de la Albufera">
         </picture>
 
     </header>
@@ -38,7 +39,7 @@
             ofreciendo una vista impresionante del paisaje y la fauna.
         </p>
         <div class="article__img">
-            <img src="./assets/img/albufera-atardecer.jpg" alt="Foto de Loli Gavilán. L'albufera">
+            <img src="./assets/img/albufera-atardecer.webp" loading="lazy" width="448" height="255" alt="Foto de Loli Gavilán. L'albufera">
             <span class="credito">Loli Gavilán</span>
         </div>
 
