cambios en la devesa

--- a/src/devesa.html
+++ b/src/devesa.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página dedicada al bosque de la Devesa de El Saler">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
     <link rel="stylesheet" href="assets/styles/main.scss" />
     <script type="module" src="app.js"></script>
@@ -14,9 +15,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/devesa-l.jpg">
-            <source media="(min-width: 500px )" srcset="./assets/img/devesa-m.jpg" alt="Jesus Villarreal">
-            <img src="./assets/img/devesa-s.jpg" alt="foto de Artfolc">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/devesa-l.webp">
+            <source media="(min-width: 500px )" width="858" height="612" srcset="./assets/img/devesa-m.webp" alt="Jesus Villarreal">
+            <img src="./assets/img/devesa-s.webp" width="586" height="711" alt="foto de Artfolc">
         </picture>
     </header>
 
@@ -35,7 +36,7 @@
             animi ut, porro similique ducimus amet esse repellendus illum! Cupiditate commodi quisquam dolor sit!
         </p>
         <div class="article__img">
-            <img src="./assets/img/devesa-img.jpg" alt="foto de Fina Alcalá de El Saler">
+            <img src="./assets/img/devesa-img.webp" loading="lazy" width="448" height="255" alt="foto de Fina Alcalá de El Saler">
             <span class="credito">Fina Alcalá</span>
         </div>
     </main>
