--- a/src/actividad-humana.html
+++ b/src/actividad-humana.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
+    <meta name="description" content="Pagina dedicada a los aprovechamientos humanos del entorno de la  Albufera">
     <link rel="stylesheet" href="assets/styles/main.scss" />
     <script type="module" src="app.js"></script>
     <title>Actividades humanas en l'Albufera</title>
@@ -14,9 +15,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/ah-l.jpg">
-            <source media="(min-width: 500px )" srcset="./assets/img/ah-m.jpg">
-            <img src="./assets/img/ah.jpg" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/ah-l.webp">
+            <source media="(min-width: 500px )" width="858" height="612" srcset="./assets/img/ah-m.webp">
+            <img src="./assets/img/ah.webp" width="586" height="711" alt="Albufera al atardecer">
         </picture>
     </header>
 
@@ -40,25 +41,25 @@
         </p>
         <div class="main__iconos">
             <div>
-                <img src="./assets/img/pesca.png" alt="">
+                <img src="./assets/img/pesca.png" width="250" height="250" alt="pesca">
                 <span class="iconos__text">Pesca</span>
             </div>
             <div>
-                <img src="./assets/img/caza.png" alt="">
+                <img src="./assets/img/caza.png" width="250" height="250" alt="caza">
                 <span class="iconos__text">Caza</span>
             </div>
             <div class="">
                 <a href="arrozales.html" target="_self">
-                    <img class="animacion" src="./assets/img/arrozales.png" alt="">
+                    <img class="animacion" width="250" height="250" src="./assets/img/arrozales.png" alt="arroz" aria-label="cultivo del arroz">
                 </a>
                 <span class="iconos__text">Arrozales</span>
             </div>
             <div>
-                <img src="./assets/img/turismo.png" alt="">
+                <img src="./assets/img/turismo.png" width="250" height="250" alt="turismo">
                 <span class="iconos__text">Turismo</span>
             </div>
             <div>
-                <img src="./assets/img/gastronomia.png" alt="">
+                <img src="./assets/img/gastronomia.png" width="250" height="250" alt="gastronomia">
                 <span class="iconos__text">Gastronomía</span>
             </div>
         </div>
