cambios en arrozales

--- a/src/arrozales.html
+++ b/src/arrozales.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="el cultivo de arroz en la Albufera">
     <link rel="icon" href="./assets/img/favicon.png" type="image/png" />
     <link rel="stylesheet" href="./assets/styles/main.scss" />
     <script type="module" src="app.js"></script>
@@ -14,9 +15,9 @@
 <body>
     <header>
         <picture class="header__picture">
-            <source media="(min-width: 951px )" srcset="./assets/img/cabecera-l.png">
-            <source media="(min-width: 500px )" srcset="./assets/img/cabecera-m.png">
-            <img src="./assets/img/cabecera-s.png" alt="Albufera al atardecer">
+            <source media="(min-width: 951px )" width="1318" height="349" srcset="./assets/img/cabecera-l.webp">
+            <source media="(min-width: 500px )" width="858" height="612" srcset="./assets/img/cabecera-m.webp">
+            <img src="./assets/img/cabecera-s.webp" width="586" height="711" alt="Albufera al atardecer">
         </picture>
     </header>
 
